# bakkeswap

./: .gitignore  CONTRIBUTING.md  Cargo.toml  OFFLINE_ONLY_WARNING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/bakkeswap-cli/: Cargo.toml
crates/bakkeswap-cli/src/: main.rs
crates/bakkeswap-core/: Cargo.toml
crates/bakkeswap-core/src/: errors.rs  lib.rs
crates/bakkeswap-core/src/database/: importer.rs  indexer.rs  mod.rs  schema.rs  search.rs  service.rs
crates/bakkeswap-core/src/domain/: models.rs
crates/bakkeswap-core/src/services/: backups.rs  builder.rs  installer.rs  mod.rs  paths.rs  planner.rs  restore.rs  status.rs
crates/bakkeswap-core/src/upk/: compression.rs  crypto.rs  depends_table.rs  export_table.rs  exports.rs  format.rs  import_table.rs  imports.rs  inspect.rs  known_answer.rs  mod.rs  name_table.rs  names.rs  parser.rs  reader.rs  rebuild.rs  rebuilder.rs  tables.rs  validate.rs  validation.rs  validator.rs  writer.rs
crates/bakkeswap-core/tests/: backups.rs  builder.rs  import_search.rs  installer.rs  planner.rs  restore.rs
crates/bakkeswap-core/tests/fixtures/codered_minimal/: PaintDump.json  ProductDump.json  SlotDump.json  TitleDump.json
crates/bakkeswap-core/tests/fixtures/codered_planner/: PaintDump.json  ProductDump.json  SlotDump.json  TitleDump.json
docs/: ARCHITECTURE.md  BETA_RELEASE_CHECKLIST.md  BUILDING_FROM_SOURCE.md  CLI_COMMAND_DESIGN.md  GOLDEN_TEST_CASES.md  GUI_SANDBOX_SMOKE_WORKFLOW.md  GUI_UX_FLOW.md  MIGRATION_PLAN.md  PACKAGING_WINDOWS.md  PHASE_1_DB_SEARCH_STATUS.md  PHASE_2_PLANNER_STATUS.md  PHASE_3A_UPK_READ_ONLY_STATUS.md  PHASE_3B_REBUILD_PLAN.md  PHASE_3C_SANDBOX_REBUILDER_STATUS.md  PHASE_3D_PLAN_BUILD_STATUS.md  PHASE_4A_INSTALL_DRY_RUN_STATUS.md  PHASE_4B_BACKUP_MANAGERS_STATUS.md  PHASE_4C_INSTALL_EXECUTION_STATUS.md  PHASE_4D_RESTORE_STATUS.md  PHASE_5B_GUI_SANDBOX_SMOKE_STATUS.md  PHASE_5C_HUMAN_GUI_CLICKTHROUGH_STATUS.md  PHASE_5_TAURI_GUI_STATUS.md  PHASE_6B_DESKTOP_TOOL_UI_STATUS.md  PHASE_6C_UI_MICROPOLISH_STATUS.md  PHASE_6_PACKAGING_STATUS.md  QUICK_START_BETA.md  RUST_PORT_CHECKLIST.md  RUST_SKELETON_COMPILE_REPORT.md  SAFETY_MODEL.md  SQLITE_SCHEMA.md  UI_STYLE_GUIDE.md  UPK_FORMAT_NOTES.md  UPK_REBUILDER_VALIDATION.md  UPK_REBUILD_KNOWN_ANSWER_PLAN.md  UPK_WRITER_BOUNDARIES.md
scripts/: capture_docs_screenshots.ps1
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: gui_sandbox_smoke.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/lib/: api.ts  store.ts  types.ts
src/lib/components/: NoticeGroup.svelte
