[workspace]
members = [
    "crates/bakkeswap-core",
    "crates/bakkeswap-cli",
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Proprietary"
version = "0.1.0"
authors = ["BakkesSwap"]

[workspace.dependencies]
anyhow = "1.0"
camino = "1.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
