[package]
name = "bakkeswap-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes.workspace = true
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
flate2.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3.14"
